# lark-doc-whisper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  extensions_config.json  pyproject.toml
configs/: app.yaml  deerflow.yaml
deploy/: lark-doc-whisper.logrotate  lark-doc-whisper.service
docs/: deploy_sop.md  deploy_sop.zh-CN.md  lark_doc_whisper_architecture.md  lark_doc_whisper_architecture.zh-CN.md  todo.md
src/lark_doc_whisper/: __init__.py  __main__.py  config.py  thread_id.py
src/lark_doc_whisper/agent/: backend.py  deerflow_backend.py  doc_context.py  episode_summarizer.py  github_mcp_policy.py  (+3 more)
tests/: test_audit_log_plugin.py  test_bitable_fetcher.py  test_comment_context_provider.py  test_comment_handler_deerflow_error_fallback.py  test_comment_handler_plugin_dispatch.py  test_comment_handler_quote_context.py  test_deerflow_backend_doc_context.py  test_deerflow_memory_config.py  test_doc_context_middleware.py  test_drive_fetcher.py  test_env_loading.py  test_episode_summarizer.py  test_failure_events.py  test_gateway_queue.py  test_github_mcp_config.py  test_github_mcp_policy.py  test_lark_admin_notifier_plugin.py  test_lark_client.py  test_lark_comment_context.py  test_lark_oauth.py  test_oauth_callback.py  test_plugin_registry.py  test_security_policy.py  test_seen_events_sqlite.py  test_sheets_fetcher.py  test_singleton_lock.py  test_slides_fetcher.py  test_state_cleanup.py  test_thread_id.py  test_url_fetch_tool.py  test_user_doc_tokens.py  test_user_history_tool.py  test_user_memory.py  test_whiteboard_fetcher.py
(+30 files in other folders)
