[project]
name = "lark-doc-whisper"
version = "0.1.0"
description = "AI-powered Q&A bot for Lark/Feishu doc comments, backed by deerflow harness."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "su heng" },
]

dependencies = [
    "lark-oapi>=1.7.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # deerflow-harness is installed from git; see [tool.uv.sources] below.
    "deerflow-harness",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
lark-doc-whisper = "lark_doc_whisper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lark_doc_whisper"]

[tool.uv.sources]
# deerflow-harness is an unpublished uv-workspace package inside bytedance/deer-flow;
# pull it straight from git (tracking main). Build needs network access to GitHub.
deerflow-harness = { git = "https://github.com/bytedance/deer-flow.git", subdirectory = "backend/packages/harness", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
